@startuml

hide empty members

interface ITradeDataProvider {
    + List<string> GetTradeData(Stream stream)
}

interface  ITradeParser {
    + List<TradeRecord> Parse(List<string> lines)
}

interface ITradeStorage {
    + string Persist(List<TradeRecord> trades)
}

interface IDatabaseRepository {
    + void ClearAllTrades()
    + void InsertTrade(TradeRecord trade)
    + void InsertTrades(IEnumerable<TradeRecord> trades)
    + List<TradeRecord> GetAllTrades()
    + int GetTradeCount()
}

class TradeDataProvider {
    + List<string> GetTradeData(Stream stream)
}

class TradeParser {
    - float LotSize = 100
    + List<TradeRecord> Parse(List<string> lines)
    - TradeRecord MapTradeDataToTradeRecord(IReadOnlyList<string> fields)
    - bool ValidateTradeData(IReadOnlyList<string> fields, int currentLine)
}

class DatabaseRepository {
    - string _databasePath
    + DatabaseRepository(string databasePath)
    + void ClearAllTrades()
    + void InsertTrade(TradeRecord trade)
    + void InsertTrades(IEnumerable<TradeRecord> trades)
    + List<TradeRecord> GetAllTrades()
    + int GetTradeCount()
}

class TradeStorage {
    - IDatabaseRepository _databaseRepository
    + TradeStorage(IDatabaseRepository databaseRepository)
    + string Persist(List<TradeRecord> trades)
}

class TradeProcessor {
    - ITradeParser _tradeParser
    - ITradeStorage _tradeStorage
    - ITradeDataProvider _tradeDataProvider
    + void TradeProcessor(ITradeParser tradeParser, ITradeStorage tradeStorage, ITradeDataProvider tradeDataProvider)
    + void ProcessTrades(Stream stream)
}

class TradeRecord {
    + int Id {get, init}
    + string SourceCurrency {get, init}
    + string DestinationCurrency {get, init}
    + float Lots {get, init}
    + decimal Price {get, init}
}

class Program {
    - void Main()
}

TradeDataProvider ..up|> ITradeDataProvider
TradeParser ..up|> ITradeParser
TradeStorage ..up|> ITradeStorage
DatabaseRepository ..up|> IDatabaseRepository
TradeProcessor ..> ITradeDataProvider: <<uses>>
TradeProcessor ..> ITradeParser: <<uses>>
TradeProcessor ..> ITradeStorage: <<uses>>
TradeProcessor ..> TradeRecord: <<uses>>
TradeParser ..> TradeRecord: <<creates>>
TradeStorage ..> TradeRecord: <<uses>>
TradeStorage ..> IDatabaseRepository: <<uses>>
DatabaseRepository ..> TradeRecord: <<uses>>
Program ..> TradeProcessor: <<creates>>
Program ..> TradeDataProvider: <<creates>>
Program ..> TradeParser: <<creates>>
Program ..> TradeStorage: <<creates>>
Program ..> DatabaseRepository: <<creates>>
Program ..> TradeRecord: <<uses>>

@enduml
